--- a/MendotA_Modeling.Rmd
+++ b/MendotA_Modeling.Rmd
@@ -15,7 +15,8 @@ a) Loading dependent packages...
 library(ggplot2) #needed for plots
 library(ggbreak) #needed for plot scale breaks
 library(dplyr) #needed for reshaping/reformating data
-library(xts) #needed to convert data frame to time series
+library(rgl) #needed to make 3D plots
+#library(xts) #needed to convert data frame to time series
 ```
 
 b) Loading data...
@@ -47,19 +48,19 @@ Me_all<- merge(Me_all, Me_intLoad, by="sampledate")
 Me_all<- Me_all %>%
   mutate(Yr=Yr.x, #rename field
          Yr.x=NULL, #delete extra field
-         daymum=daynum.x, #rename field
+         daynum=daynum.x, #rename field
          daynum.x=NULL, #delete extra field
          Yr.y=NULL, #delete extra field
          daynum.y=NULL) #delete extra field
 ```
 
-# Step 3. Perform time series regression:
+# Step 3. Calculate lagged data:
 Note, Time series regression model assumes the time series "Y" has a linear 
 relationship with the times series "X". But, you need to subset the response 
 variable(s) to the CyanoHAB season (daynum > 195 & < 255).To do this, I need to
 make a new time series with the current chl-a and the t-k, when k = 7, 14, 30.
 
-a) Create new data frame with lagged variables...
+creating a new data frame with lagged variables...
 
 ```{r}
 water_int_k<- transform(Me_all, HE_ratio_k=lag(HE_ratio_TotP_mgL, n=7), 
@@ -68,491 +69,245 @@ water_int_k<- transform(Me_all, HE_ratio_k=lag(HE_ratio_TotP_mgL, n=7),
                         #adds column with X_2, t-14 value
                         Chla_ugL_k=lag(Chla_ugL, n=7), 
                         #adds column with Y_1, t-7 value
-                        CyanoDens_cellsmL_k=lag( CyanoDens_cellsmL, n=7) 
+                        CyanoDens_cellsmL_k=lag(CyanoDens_cellsmL, n=7) 
                         #adds column with Y_2, t-7 value
 )
 water_int_k<- water_int_k %>%
-  filter(daynum < 255 & daynum > 195) 
-#filters the new data frame for observations during CyanoHAB season
+  filter(daynum < 255 & daynum > 195) #filters the data for the CyanoHAB season
 ```
 
-b) Check data for normality to determine model...
+Lagged data computed.
+
+# Step 4. Check data for normality to determine whether transformation needed:
+If data is normally distributed, then you can use simple linear regression or 
+ANOVA. If data is non-normally distributed, then you need to pick a 
+non-parametric model. The general linear model does not require 
+normal-distribution.
+
+checking for normality...
 
 ```{r}
 hist(water_int_k$Chla_ugL, breaks=100) #prints histograph of Chl-a
 #data right skewed
 hist(log10(water_int_k$Chla_ugL), breaks=100) #prints histograph of log10(Chl-a)
-#log-transform data is normal
+#log-transform data is more normal
+hist(water_int_k$CyanoDens_cellsmL, breaks=100) #prints histograph of CD
+#data right skewed
+hist(log10(water_int_k$CyanoDens_cellsmL), breaks=100) #prints histograph of log10(CD)
+#log-transform data is more normal
 hist(water_int_k$totextP_kgday, breaks=100) #prints hist of ext load term
 #data right skewed
 hist(log10(water_int_k$totextP_kgday), breaks=100) #prints hist of ext load term
 #data more normal, but still right skewed
 hist(water_int_k$HE_ratio_TotP_mgL, breaks=100) #prints hist of int load term
 #data right-skewed
-hist(log10(water_int_k$HE_ratio_TotP_mgL), breaks=100) #prints hist of int load term
+hist(log10(water_int_k$HE_ratio_TotP_mgL), breaks=100) #prints hist of int load 
 #data more normal
 ```
 
-If data is normally distributed, then you can use simple linear regression or 
-ANOVA. If data is non-normally distributed, then you need to pick a 
-non-parametric model. The general linear model does not require 
-normal-distribution.
+All data is positively skewed, so both predictor and response variables 
+need to be transformed to log 10 for modeling.
 
-Note, this data is positively skewed, so both predictor and response variables 
-need to be transformed to log 10, unless you use general linear model.
 
-c) Run simplest model for each response variable...
+# Step 5. Perform regression:
+
+a) Run simplest model for each response variable...
 
 Chla_t = Chla_t-7 + error...
 
 ```{r}
-plot(water_int_k$Chla_ugL  ~ water_int_k$Chla_ugL_k, 
-     xlab="Total Chlorophyll-a, 7 days prior (ug/L)",
-     ylab="Total Chlorophyll-a (ug/L)")
-regk1<- glm(water_int_k$Chla_ugL  ~ water_int_k$Chla_ugL_k) #Y_1, t-k as predictor variable
-summary(regk1) #prints the glm output
-aov(regk1) #prints the sum of squares for the regression and residuals
+plot(log10(water_int_k$Chla_ugL)~log10(water_int_k$Chla_ugL_k), 
+     xlab="Total Chlorophyll-a, 7 days prior (ug/L), log10-transformed",
+     ylab="Total Chlorophyll-a (ug/L), log10-transformed")
+regk1_Chla<- glm(data=na.omit(water_int_k), #removes nas
+            formula= log10(Chla_ugL+0.1)~log10(Chla_ugL_k+0.1)) #add 0.1 to avoid log10=NA
+summary(regk1_Chla) #prints the glm output
+aov(regk1_Chla) #prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk1) #prints diagnostic graphs for regression
+plot(regk1_Chla) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))#returns graphing viewer to 1 plot per page
 ```
 
 CD_t = CD_t-7 + error...
 
 ```{r}
-plot(water_int_k$CyanoDens_cellsmL  ~ water_int_k$CyanoDens_cellsmL_k, 
-     xlab="Cyanobacteria density, 7 days prior (cells/mL)",
-     ylab="Cyanobacteria density (cells/mL)")
-regk1<- glm(water_int_k$CyanoDens_cellsmL  ~ water_int_k$CyanoDens_cellsmL_k) #Y_2, t-k as predictor variable
-summary(regk1) #prints the glm output
-aov(regk1)#prints the sum of squares for the regression and residuals
+plot(log10(water_int_k$CyanoDens_cellsmL)~log10(water_int_k$CyanoDens_cellsmL_k), 
+     xlab="Cyanobacteria density, 7 days prior (cells/mL), log10-transformed",
+     ylab="Cyanobacteria density (cells/mL), log10-transformed")
+regk1_CD<- glm(data=na.omit(water_int_k),
+            formula=log10(CyanoDens_cellsmL)~log10(CyanoDens_cellsmL_k)) #Y_2, t-k as predictor variable
+summary(regk1_CD) #prints the glm output
+aov(regk1_CD)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk1) #prints diagnostic graphs for regression
+plot(regk1_CD) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))#returns graphing viewer to 1 plot per page
 ```
 
-d) Run 2nd model for each response variable...
+b) Run 2nd model for each response variable...
 
 Chla_t = hypoP:epiP_t-7 + error...
 
 ```{r}
-plot(water_int_k$Chla_ugL  ~ water_int_k$HE_ratio_k, 
-     xlab="Hypo: Epi ratio of total P, 7 days before",
-     ylab="Total Chlorophyll-a (ug/L)")
-regk2<- glm(water_int_k$Chla_ugL  ~ water_int_k$HE_ratio_k) #X1 predictor variable
-summary(regk2)
-aov(regk2)#prints the sum of squares for the regression and residuals
+plot(log10(water_int_k$Chla_ugL)~log10(water_int_k$HE_ratio_k), 
+     xlab="Hypo: Epi ratio of total P, 7 days before, log10-transformed",
+     ylab="Total Chlorophyll-a (ug/L), log10-transformed")
+regk2_Chla<- glm(data=na.omit(water_int_k),
+                 formula=log10(Chla_ugL+0.1)~log10(HE_ratio_k)) #X1 predictor variable
+summary(regk2_Chla) #prints the glm output
+aov(regk2_Chla)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk2) #prints diagnostic graphs for regression
+plot(regk2_Chla) #prints diagnostic graphs for regression
 par(mfrow=c(1,1)) #returns graphing viewer to 1 plot per page
 ```
 
 CD_t = hypoP:epiP_t-7 + error...
 
 ```{r}
-plot(water_int_k$CyanoDens_cellsmL  ~ water_int_k$HE_ratio_k, 
-     xlab="Hypo: Epi ratio of total P, 7 days before",
-     ylab="Cyanobacteria relative biovolume (as % total)")
-regk2<- glm(water_int_k$CyanoDens_cellsmL  ~ water_int_k$HE_ratio_k) #X1 predictor variable
-summary(regk2) #prints the glm output
-aov(regk2)#prints the sum of squares for the regression and residuals
+plot(log10(water_int_k$CyanoDens_cellsmL)~log10(water_int_k$HE_ratio_k), 
+     xlab="Hypo: Epi ratio of total P, 7 days before, log10-transformed",
+     ylab="Cyanobacteria density (cells/mL), log10-transformed")
+regk2_CD<- glm(data=water_int_k,
+               formula=log10(CyanoDens_cellsmL)~log10(water_int_k$HE_ratio_k)) #X1 predictor variable
+summary(regk2_CD) #prints the glm output
+aov(regk2_CD)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk2) #prints diagnostic graphs for regression
+plot(regk2_CD) #prints diagnostic graphs for regression
 par(mfrow=c(1,1)) #returns graphing viewer to 1 plot per page
 ```
 
-e) Run 3rd model for each response variable...  
+c) Run 3rd model for each response variable...  
 
 Chla_t = ExtPLoad_t-14 + error...
 
 ```{r}
-plot(water_int_k$Chla_ugL  ~ water_int_k$totextP_kgday_k, 
-     xlab="Total P external loading, 14 days before (kg/day)",
-     ylab="Total Chlorophyll-a (ug/L)")
-regk3<- glm(water_int_k$Chla_ugL  ~ #Y1 response variable
-              water_int_k$totextP_kgday_k) #X2 predictor variable
-summary(regk3) #prints the glm output
-aov(regk3)#prints the sum of squares for the regression and residuals
+plot(log10(water_int_k$Chla_ugL)~log10(water_int_k$totextP_kgday_k), 
+     xlab="Total P external loading, 14 days before (kg/day), log-transformed",
+     ylab="Total Chlorophyll-a (ug/L), log-transformed")
+regk3_Chla<- glm(data=water_int_k,
+            formula=log10(Chla_ugL+0.1)~log10(totextP_kgday_k)) 
+summary(regk3_Chla) #prints the glm output
+aov(regk3_Chla)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk3) #prints diagnostic graphs for regression
+plot(regk3_Chla) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
 CD_t = ExtPLoad_t-14 + error...
 
 ```{r}
-plot(water_int_k$CyanoDens_cellsmL  ~ water_int_k$totextP_kgday_k, 
-     xlab="Total P external loading, 14 days before (kg/day)",
-     ylab="Cyanobacteria Density (cells/mL)")
-regk3<- glm(water_int_k$CyanoDens_cellsmL  ~ #Y1 response variable
-              water_int_k$totextP_kgday_k) #X2 predictor variable
-summary(regk3)#prints the glm output
-aov(regk3)#prints the sum of squares for the regression and residuals
+plot(log10(water_int_k$CyanoDens_cellsmL)~log10(water_int_k$totextP_kgday_k), 
+     xlab="Total P external loading, 14 days before (kg/day), log-transformed",
+     ylab="Cyanobacteria Density (cells/mL), log-transformed")
+regk3_CD<- glm(data=water_int_k,
+            formula=log10(CyanoDens_cellsmL)~log10(totextP_kgday_k))
+summary(regk3_CD)#prints the glm output
+aov(regk3_CD)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk3) #prints diagnostic graphs for regression
+plot(regk3_CD) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
-f) Run 4th model for each response variable...
+d) Run 4th model for each response variable...
 
 Chla_t = hypoP:epiP_t-7 + ExtPLoad_t-14 + error...
 
 ```{r}
-regk4<- glm(formula=Chla_ugL ~ #response variable
-             HE_ratio_k + #X1 predictor variable
-              totextP_kgday_k, #X2 predictor variable
+regk4_Chla<- glm(formula=log10(Chla_ugL+0.1) ~ #response variable
+             log10(HE_ratio_k) + #X1 predictor variable
+              log10(totextP_kgday_k), #X2 predictor variable
               data=water_int_k) #data frame
-summary(regk4)#prints the glm output
-aov(regk4)#prints the sum of squares for the regression and residuals
-af<- aov(regk4) #prints out ANOVA summary table of model with Sum of Squares
-afss <- af$"Sum of Squares" #saves the sum of squares as new vector
-print(cbind(af, #prints the ANOVA summary table with new columns holding... 
-            PctExp=afss/sum(afss)*100)) # The calculated Percent Variability (as the sum square for each predictor / total sum squares *100)
-#Explained by each of the predictor terms in a new column PctExp. 
+summary(regk4_Chla)#prints the glm output
+aov(regk4_Chla)#prints the sum of squares for the regression and residuals
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk4) #prints diagnostic graphs for regression
+plot(regk4_Chla) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
 CD_t = hypoP:epiP_t-7 + ExtPLoad_t-14 + error...
 
 ```{r}
-regk4<- glm(formula=CyanoDens_cellsmL ~ #response variable
-             HE_ratio_k + #X1 predictor variable
-              totextP_kgday_k, #X2 predictor variable
+regk4_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
+             log10(HE_ratio_k) + #X1 predictor variable
+              log10(totextP_kgday_k), #X2 predictor variable
               data=water_int_k) #data frame
-summary(regk4)
-aov(regk4)
+summary(regk4_CD)
+aov(regk4_CD)
 layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regk4) #prints diagnostic graphs for regression
+plot(regk4_CD) #prints diagnostic graphs for regression
 par(mfrow=c(1,1))
 ```
 
-# Step 4. Compare models:
+e) Run 5th model for each response variable...
+
+Chla_t = hypoP:epiP_t-7 + ExtPLoad_t-14 + Chla_t-7 + error...
 
 ```{r}
-anova(regk2, regk3) #model with the lowest AIC offers better fit
-anova(regk3, regk4)
+regk5_Chla<- glm(formula=log10(Chla_ugL+0.1) ~ #response variable
+             log10(HE_ratio_k) + #X1 predictor variable
+              log10(totextP_kgday_k) +
+               log10(Chla_ugL_k+0.1), #X2 predictor variable
+              data=water_int_k) #data frame
+summary(regk5_Chla)#prints the glm output
+aov(regk5_Chla)#prints the sum of squares for the regression and residuals
+layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
+plot(regk5_Chla) #prints diagnostic graphs for regression
+par(mfrow=c(1,1))
 ```
 
-The 4th model has the lowest AIC and residual deviance.
-
-
-# Step 10. Making a 3D plot of the selected model:
+CD_t = hypoP:epiP_t-7 + ExtPLoad_t-14  + CD_t-7 + error...
 
 ```{r}
-library(rgl)
-water_int<- read.csv(file="Cleaned_data/Mendota_ts.csv")
+regk5_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
+             log10(HE_ratio_k) + #X1 predictor variable
+              log10(totextP_kgday_k) +
+               log10(CyanoDens_cellsmL_k), #X2 predictor variable
+              data=water_int_k) #data frame
+summary(regk5_CD)
+aov(regk5_CD)
+layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
+plot(regk5_CD) #prints diagnostic graphs for regression
+par(mfrow=c(1,1))
+```
+
+# Step 6. Compare the models:
+The model with the lowest AIC, Residual standard error, and each term is
+significant (t-score p-valu < 0.05) is the best model.
+
+# Step 7. Compare the output by year:
+
+```{r}
+regk5_Chla<- glm(formula=log10(Chla_ugL+0.1) ~ #response variable
+             log10(HE_ratio_k) + #X1 predictor variable
+              log10(totextP_kgday_k) +#x2 predictor variable
+               log10(Chla_ugL_k+0.1), #X3 predctor variable
+              data=subset(water_int_k, Yr==2018) #data from year z
+             )
+aov(regk5_Chla)#prints the sum of squares for the regression and residuals
 ```
 
 ```{r}
-mycols <- colorRampPalette( c("#ff0000", "#00ff00") )
+regk5_CD<- glm(formula=log10(CyanoDens_cellsmL) ~ #response variable
+             log10(HE_ratio_k) + #X1 predictor variable
+              log10(totextP_kgday_k) +
+               log10(CyanoDens_cellsmL_k), #X2 predictor variable
+              data=subset(water_int_k, Yr==2018) #data frame
+            )
+aov(regk5_CD)
+```
+
+# Step 8. Making a 3D plot of the selected model:
+
+```{r}
+mycols <- colorRampPalette( c("green", "red") )
 plot3d( 
-  x=water_int$`HE_P_ratio`, y=water_int$`TotPextld_lbday`, z=log10(water_int$`Chla_ugL`+0.1), 
-  colvar=water_int$Chla_ugL,
+  x=log10(water_int_k$HE_ratio_k), 
+  y=water_int_k$totextP_kgday_k, 
+  z=(water_int_k$Chla_ugL), 
+  colvar=(water_int_k$Chla_ugL),
   type = 's', 
-  radius = 1,
-  xlab="Hypo: Epi P ratio", ylab="Total P external load (lb/day)", zlab="Total Chl-a (ug/L)")
+  size=0.75,
+  xlab="Hypo: Epi P ratio", 
+  ylab="Total P external load (lb/day)", 
+  zlab="Total Chl-a from 7 days before (ug/L)")
 rglwidget()
-```
-
-
-
-
-
-
-
-
-
-______________Old Code_____________________
-
-# Step 4. Analyze the response variables by predictors:
-
-a) Question: Does epilimnion total P concentration correlate with chl-a?
-
-combining data files...
-```{r}
-Chl_moyr<- Me_Chl %>%
-  group_by(MoYr) %>%
-  summarise(Avg_Chla_ugL=mean(Chla_ugL, na.rm=TRUE)) %>%
-  mutate(MoYr=as.Date(MoYr, format="%m/%d/%Y", origin="1899-12-30"))
-P_Chl<- merge(Chl_moyr, Pratio, by="MoYr", all=TRUE)
-P_Chl<- P_Chl %>%
-  filter(!is.na(TotP_mgL_Epi),
-         !is.na(TotP_mgL_Hypo)) 
-```
-
-setting up plot...
-
-```{r}
-ggplot(data=P_Chl, aes(x=TotP_mgL_Epi, y=Avg_Chla_ugL))+
-  geom_point() + 
-  scale_y_continuous(trans="log10") +
-  labs(title = "Lake Mendota, WI",
-       x="Epilimnion total phosphorus (mg/L)",
-       y="Total Algal Biomass as Chl-a (ug/L), log scale",
-       caption= "Source: Lake Mendota,North Temperate Lakes Dataset") +
-  theme_classic()+
-  geom_smooth()  #adds loess curve (moving average regression model)
-```
-
-b) Question: Does hypolimion total P concentration correlate with Chl-a?
-
-```{r}
-ggplot(data=P_Chl, aes(x=TotP_mgL_Hypo, y=Avg_Chla_ugL))+
-  geom_point() + 
-  scale_y_continuous(trans="log10") +
-  labs(title = "Lake Mendota, WI",
-       x="Hypolimnion total phosphorus (mg/L)",
-       y="Total Algal Biomass as Chl-a (ug/L), log scale",
-       caption= "Source: Lake Mendota,North Temperate Lakes Dataset") +
-  theme_classic()+
-  geom_smooth()  #adds loess curve (moving average regression model)
-```
-
-c) Question: Does Hypo: Epi total P concentration correlate with Chl-a?
-
-```{r}
-ggplot(data=P_Chl, aes(x=HE_ratio_TotP_mgL, y=Avg_Chla_ugL))+
-  geom_point() + 
-  scale_y_continuous(trans="log10") +
-  scale_x_continuous(trans="log10") +
-  labs(title = "Lake Mendota, WI",
-       x="Hypo: Epi total phosphorus ratio (mg/L)",
-       y="Total Algal Biomass as Chl-a (ug/L), log scale",
-       caption= "Source: Lake Mendota,North Temperate Lakes Dataset") +
-  theme_classic()+
-  geom_smooth()  #adds loess curve (moving average regression model)
-```
-
-
-d) Question: Does epilimnion total P concentration correlate with cyano relative biovolume?
-
-combining data files...
-```{r}
-CyanoRB_moyr<- Me_cyanoRB %>%
-  mutate(MoYr=format(sampledate, "%m/01/%Y")) %>%
-  group_by(MoYr) %>%
-  summarise(Avg_relbiovol=mean(relbiovol, na.rm=TRUE)) %>%
-  mutate(MoYr=as.Date(MoYr, format="%m/%d/%Y", origin="1899-12-30"))
-P_Cyano<- merge(CyanoRB_moyr, Pratio, by="MoYr", all=TRUE)
-P_Cyano<- P_Cyano %>%
-  filter(!is.na(TotP_mgL_Epi),
-         !is.na(TotP_mgL_Hypo)) 
-```
-
-setting up plot...
-
-```{r}
-ggplot(data=P_Cyano, aes(x=TotP_mgL_Epi, y=Avg_relbiovol))+
-  geom_point() + 
-  scale_y_continuous(trans="log10") +
-  labs(title = "Lake Mendota, WI",
-       x="Epilimnion total phosphorus (mg/L)",
-       y="Cyanobacteria relative biovolume (as % of total), log scale",
-       caption= "Source: Lake Mendota,North Temperate Lakes Dataset") +
-  theme_classic()+
-  geom_smooth()  #adds loess curve (moving average regression model)
-```
-
-e) Question: Does hypolimnion total P concentration correlate with cyano relative biovolume?
-
-```{r}
-ggplot(data=P_Cyano, aes(x=TotP_mgL_Hypo, y=Avg_relbiovol))+
-  geom_point() + 
-  scale_y_continuous(trans="log10") +
-  labs(title = "Lake Mendota, WI",
-       x="Hypolimnion total phosphorus (mg/L)",
-       y="Cyanobacteria relative biovolume (as % of total), log scale",
-       caption= "Source: Lake Mendota,North Temperate Lakes Dataset") +
-  theme_classic()+
-  geom_smooth()  #adds loess curve (moving average regression model)
-```
-
-f) Question: Does hypo: epi total P concentration correlate with cyano relative biovolume?
-
-```{r}
-ggplot(data=P_Cyano, aes(x=HE_ratio_TotP_mgL, y=Avg_relbiovol))+
-  geom_point() + 
-  scale_y_continuous(trans="log10") +
-  scale_x_continuous(trans="log10") +
-  labs(title = "Lake Mendota, WI",
-       x="Hypolimnion total phosphorus (mg/L)",
-       y="Cyanobacteria relative biovolume (as % of total), log scale",
-       caption= "Source: Lake Mendota,North Temperate Lakes Dataset") +
-  theme_classic()+
-  geom_smooth()  #adds loess curve (moving average regression model)
-```
-
-____________NEEDS UPDATED_____________________________
-
-g) Question: Does total P loading from inflows predict Chl-a?
-
-```{r}
-ggplot(data=P_Chl, aes(x=TotPload_gday/1000, y=Chla_ugL)
-       ) + 
-  geom_point() +
-  theme_classic() + 
-  labs(title="Lake Mendota, WI",
-       x="Total P loading (kg/day)",
-       y="Total Algal Biomass (Chl-a ug/L)") +
-  scale_y_continuous(trans = 'log10') +
-  scale_x_continuous(trans = 'log10') 
-```
-
-Nope, not at all. Plot of Chla by total P loading shows no correlation.
-
-Question: Does total P export in outflow predict Chl-a?
-
-```{r}
-ggplot(data=P_Chl, aes(x=TotPexp_gday/1000, y=Chla_ugL)
-       ) + 
-  geom_point() +
-  theme_classic() + 
-  labs(title="Lake Mendota, WI",
-       x="Total P export (kg/day)",
-       y="Total Algal Biomass (Chl-a ug/L)") +
-  scale_y_continuous(trans = 'log10') +
-  scale_x_continuous(trans = 'log10') 
-```
-
-Plot of Chla by total P export shows no correlation.
-
-Question: Does total P stored/released predict Chl-a?
-
-```{r}
-ggplot(data=P_Chl, aes(x=P_stored_gday/1000, y=Chla_ugL)
-       ) + 
-  geom_point() +
-  theme_classic() + 
-  labs(title="Lake Mendota, WI",
-       x="Total P stored (+) or released (-) (kg/day)",
-       y="Total Algal Biomass (Chl-a ug/L)") +
-  scale_y_continuous(trans = 'log10') +
-  geom_vline(xintercept = 0, lty="dashed")
-```
-
-Plot of Chla by P stored or released shows almost all the data points to the left of the zero line. 
-
-```{r}
-ggplot(data=subset(P_Chl, daynum >= 195 & daynum <=255), aes(x=P_stored_gday/1000, y=Chla_ugL)) + 
-  geom_point() +
-  theme_classic() + 
-  labs(title="CyanoHAB Season, Lake Mendota, WI",
-       x="Total P stored (+) or released (-) (kg/day)",
-       y="Total Algal Biomass (Chl-a ug/L)") +
-  #scale_y_continuous(trans='log10') +
-  #scale_x_continous(trans='log10) +
-  geom_vline(xintercept = 0, lty="dashed")
-```
-
-Even during the CyanoHAB season, there's no relationship!!!
-
-
-Plot Chl-a by internal load:
-
-```{r}
-ggplot(data=P_Chl_yr) + 
-  geom_point(aes(x=Net_IL_gyr, y=MaxChl_ugL)) +
-  geom_line(aes(x=TotPload_gyr, y=MaxChl_ugL)) +
-  theme_classic() + 
-  labs(title="CyanoHAB Season, Lake Mendota, WI",
-       x="Net Annual Internal Loading (g/yr)",
-       y="Maximum Algal Biomass (Chl-a ug/L)") 
-  #scale_y_continuous(trans='log10') +
-  #scale_x_continous(trans='log10) +
-```
-
-
-
-
-
-```{r}
-hypo_sum_ME_TP<- read.csv(file.choose(), header=TRUE) #choose from Cleaned data folder
-hypo_sum_ME_TP$mo=NULL #remove unwanted column
-hypo_sum_ME_TP <- hypo_sum_ME_TP %>%
-  mutate(sampledate=as.Date(sampledate, 
-                            format="%m/%d/%Y",
-                            origin="1899-12-30")) #tells R to format 
-          #data as date
-sum_ME_Chl<- sum_ME_Chl %>%
-  mutate(sampledate=as.Date(sampledate, 
-                            format="%m/%d/%Y",
-                            origin="1899-12-30")) #tells R to format 
-          #data as date
-combA<- merge(hypo_sum_ME_TP, sum_ME_Chl, 
-              by=c("sampledate", "year4", "daynum", "Use_Jdate"),
-              all.x=TRUE,all.y=TRUE)
-combA$sd_hypo_TP=NULL #don't need this column
-combA<- na.omit(combA) #removes NAs (from 140 records to 59 records)
-
-ggplot(data=combA, aes(x=(mean_hypo_TP*1000), y=Chl_ugL)) + 
-  geom_point()+
-  geom_smooth(method="lm", data=subset(combA, mean_hypo_TP > 0.1)) +
-  geom_smooth(method="lm", data=subset(combA, mean_hypo_TP < 0.1)) +
-  theme_classic()+
-  labs(x="Hypolimion total P (ug/L)",
-       y="Total algal biomass (ug Chl-a/L)",
-       title="Summer, mid-July to mid-September, Lake Mendota, WI",
-       caption="Source: Lake Mendota, North Temperate Lakes Dataset")
-```
-
-First, join the two tables...
-
-```{r}
-sum_ME_Chl<-read.csv(file.choose(), header=TRUE) #file in Cleaned_data folder
-sum_ME_Chl$depth_range_m=NULL
-sum_ME_Chl$mo=NULL
-joined_TPChl<- merge(hypo_sum_ME_TP, sum_ME_Chl, by=c("sampledate", "year4",
-                                                      "Use_Jdate","daynum"))
-joined_TPChl_epi<-merge(epi_sum_ME_TP, sum_ME_Chl, by=c("sampledate", "year4",
-                                                      "Use_Jdate","daynum"))
-```
-
-Then, build the plot for EPI TP...
-
-```{r}
-ylim.prim <- c(0, 0.15)   #total P range in mg/L
-ylim.sec <- c(0, 60)    # chl-a range in ug/L
-
-b <- diff(ylim.prim)/diff(ylim.sec)
-a <- ylim.prim[1] - b*ylim.sec[1] 
-
-ggplot(data=joined_TPChl_epi, aes(x=Use_Jdate)) + 
-  facet_wrap(~year4) +
-  geom_line(aes(y=totpuf_sloh)) +
-  geom_point(aes(y = a + Chl_ugL*b)) +
-  theme_classic() +
-  theme(legend.justification=c("right", "top")) +
-  labs(x="Day of Year", y="Mean Total P (ug/L)",
-       title="Summer Epilimnion, mid-July to mid-September, Lake Mendota, WI",
-       caption="Source: Lake Mendota,North Temperate Lakes Dataset",
-       colour="Year") +
-  scale_y_continuous(sec.axis=sec_axis(~ (. - a)/b, 
-                                       name="Total Chlorophyll-a (ug/L)")) +
-  geom_hline(yintercept=20/400, col="red", lty="dashed")
-```
-
-Then, build the plot for Hypo TP...
-
-```{r}
-ylim.prim <- c(0, 0.6)   #total P range in mg/L
-ylim.sec <- c(0, 60)    # chl-a range in ug/L
-
-b <- diff(ylim.prim)/diff(ylim.sec)
-a <- ylim.prim[1] - b*ylim.sec[1] 
-
-ggplot(data=joined_TPChl, aes(x=Use_Jdate)) + 
-  facet_wrap(~year4) +
-  geom_line(aes(y=mean_hypo_TP)) +
-  geom_point(aes(y = a + Chl_ugL*b)) +
-  theme_classic() +
-  theme(legend.justification=c("right", "top")) +
-  labs(x="Day of Year", y="Hypo Total P (ug/L)",
-       title="Summer Hypolimnion, mid-July to mid-September, Lake Mendota, WI",
-       caption="Source: Lake Mendota,North Temperate Lakes Dataset",
-       colour="Year") +
-  scale_y_continuous(sec.axis=sec_axis(~ (. - a)/b, 
-                                       name="Total Chlorophyll-a (ug/L)")) +
-  geom_hline(yintercept=20/100, col="red", lty="dashed")
 ```
