--- a/Mendota_Pexternal_atmdep.Rmd
+++ b/Mendota_Pexternal_atmdep.Rmd
@@ -3,6 +3,8 @@ title: "Mendota_Pexternal_atmdep"
 author: "Lauren A. Knose, ORISE-EPA"
 date: '2023-05-24'
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 The purpose of this program is to calculate P load from atmospheric deposition. 
@@ -15,91 +17,173 @@ P_dry = P deposition * Lake surface area
 
 a) Loading dependent packages...
 ```{r}
-library(ggplot2) #needed for plots
 library(dplyr) #needed for reshaping/reformaing data
 library(lubridate) #needed for date functions
-library(zoo) #needed to interpolate data
-library(xts) #needed to convert data frame to time series
+library(ggplot2) #needed for plots
 ```
 
-b) Loading data...
+Packages loaded.
+
+b) Loading the data needed...
 Note, ensure date data is formatted in R as Date.
 
 ```{r}
 precip<- read.csv(file="Original_data/NOAA_Weather_Mendota_2012to2022.csv")
-precip<- precip %>%
-  mutate(sampledate=as.Date(sampledate, format="%m/%d/%Y", #reformat as date
-                            origin="1899-12-30"))
-precip<- precip %>%
-  filter(!Precipitation_in=="T") %>% #remove flagged data ("T")
-  mutate(Precipitation_in=as.numeric(Precipitation_in)) %>% #convert to numeric
-  filter(!is.na(Precipitation_in)) #remove NAs
 ```
 
-c) filter and mutate data as needed...
+Precipitation data loaded.
+
+# Step 2. Transform and filter the data:
+
+a) defining conversion coefficients...
+
 ```{r}
 km2_m2= 1000000/1 #conversion factor from km^2 to m^2
 A_lake_m2 = 39.40*km2_m2 #surface area of lake in m^2 
 mg_kg = 1/1000000 #conversion factor from mg to kg
-
 in_m = 1/39.3701 #conversion factor from in to m (1 m = 39.701 inches)
 m3_L = 1000/1 #conversion factor from m^3 to L (1000 L = 1 m^3)
+P_atm_dry = 0.17 #mg P/m2-day rate of P dry deposition during summer (Soranno et 
+#al 1997)
+P_atm_wet = 0.032 #mg/L rate of P wet deposition (Soranno et al 1997)
+```
 
-P_atm_dry = 0.17 #mg P/m2-day rate of P dry deposition during summer (Soranno et al 1997)
-P_atm_wet = 0.032 #mg/L rate of P wet deposition
+Conversion coefficients defined.
 
-precip <- precip %>%
-  mutate(dryP_atm_kgday = ((P_atm_dry*A_lake_m2)*mg_kg), #calculate dry P deposited
-         wetP_atm_kgday = (P_atm_wet*m3_L*(Precipitation_in*in_m*A_lake_m2)*mg_kg), 
+b) transforming and filtering the data...
+```{r}
+precip<- precip %>%
+  mutate(sampledate=as.Date(sampledate, format="%m/%d/%Y", #reformat as date
+                            origin="1899-12-30")) %>%
+  filter(!Precipitation_in=="T") %>% #remove flagged records with value "T"
+  mutate(Precipitation_in=as.numeric(Precipitation_in)) %>% #convert to numeric
+  filter(!is.na(Precipitation_in)) %>% #remove NAs
+  mutate(dryP_atm_kgday=((P_atm_dry*A_lake_m2)*mg_kg), #calculate dry P
+         wetP_atm_kgday=(P_atm_wet*m3_L*(Precipitation_in*in_m*A_lake_m2)*mg_kg),
          #calculate wet P deposited
-         totP_atm_kgday = (dryP_atm_kgday+wetP_atm_kgday) #calculate total P atm
-# deposited every day
-        ) 
+         totP_atm_kgday=(dryP_atm_kgday+wetP_atm_kgday), #calculate total P_atm
+         daynum=format(sampledate, format = "%j")
+        )
 ```
 
-# Step 2. Summarize and view the data:
+Total P from atmospheric deposition transformed and filtered.
 
-```{R}
-precip_sum <- precip %>%
-  mutate(daynum=format(sampledate, format = "%j"))
-precip_avg <-precip_sum %>%
-  filter(daynum >=195 & daynum <= 255)
-```
-
-The total external P loading from atmospheric deposition, during CyanoHAB season,
-was on average `r mean(precip_avg$totP_atm_kgday, na.rm=TRUE)` +- `r (sd(precip_avg$totP_atm_kgday, na.rm=TRUE))/sqrt(length(precip_avg$totP_atm_kgday))` kg/day.
+c) viewing data available...
 
 ```{r}
-ggplot(data=precip, #need to subset data because of big gap between 2000 and 2008
-       aes(x=sampledate, y=totP_atm_kgday)) +
-  geom_point() +
-  geom_line() + 
-  theme_classic() +
-  labs(x="Date", y="Total P deposited (wet and dry), in kg/day") +
-  scale_x_date(date_breaks="1 year") 
+ggplot(precip) + 
+  geom_point(aes(sampledate, totP_atm_kgday)) +
+  theme_classic(base_size = 12) +
+  labs(x="Sample Date", y="Total P deposited (kg/day)")
 ```
 
-# Step 3. Interpolate missing data: 
+Total P from atmospheric deposition plotted. Data available from 2012 to 2022.
 
+# Step 3. Interpolate data between observations to get daily loads: 
+
+a) interpolating...
 ```{r}
 date_range<- seq( #creates a vector of sequence data
   min(precip$sampledate), #starting at the first sample date
   max(precip$sampledate), #ending at the last sample date
-  by="1 day") #observations every 14 days (bimonthly) 
+  by="1 day") #observations every 1 day 
 interpolated<- approx( #creates a vector of data that linearly interpolates 
   precip$sampledate, #across date
-  precip$totP_atm_kgday, #the predicted values of Hypo P: Epi P ratio
+  precip$totP_atm_kgday, #the predicted values of total P
   xout=date_range) #for every 1 day
-totP_atm_interp <- data.frame( #creates a new data frame that has 
-  SampleDate = as.Date(interpolated$x), #measurements every 14 days
-                             totP_atm_kgday=interpolated$y) #predicted hypo: epi P ratio
-plot(totP_atm_interp,
-     xlab="Date",
-     ylab="Total P deposited from atmosphere (kg/day)") #plots the new time series
+precip_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #measurements every 1 day
+                             TotP_kgday=interpolated$y) #predicted total P
+
+precip_interp <-precip_interp %>%
+  mutate(daynum=as.integer(format(sampledate, format="%j")), #add column with 
+         #daynum for filtering
+         Yr=as.integer(format(sampledate, format="%Y")) #add column with Yr 
+         )
 ```
 
-# Step 4. Save estimated P atm deposition as separate data file:
+Total P loading interpreted for atmospheric deposition.
+
+# Step 4. View and summarize the data:
+
+a) viewing the data...
+```{r}
+ggplot(data=precip_interp, 
+       aes(x=sampledate, y=TotP_kgday)) +
+  geom_point() +
+  geom_line() + 
+  theme_classic(base_size=12) +
+  labs(x="Date", y="Total P deposited (wet and dry), in kg/day") +
+  scale_x_date(date_breaks="1 year") 
+```
+
+Total P from atmospheric deposition plotted.
+
+b) calculating average daily total P loading from atm deposit during CyanoHAB 
+season...
 
 ```{r}
-write.csv(totP_atm_interp, file="Cleaned_data/Mendota_P_atm.csv")
+precip_dayavg<- precip_interp %>%  
+  filter(daynum >=195 & daynum <= 255) %>%
+  summarize(mean=mean(TotP_kgday, #average daily total P loading
+                      na.rm=TRUE),
+            se=(sd(TotP_kgday, na.rm=TRUE)/sqrt(length(TotP_kgday))),
+            min=min(TotP_kgday, na.rm=TRUE),
+            max=max(TotP_kgday, na.rm=TRUE)
+            )
+precip_dayavg
+```
+
+c) calculating total P loading from atm deposit dring CyanoHAB season...
+
+```{r}
+precip_sumtot<- precip_interp %>%
+  filter(daynum>= 195 & daynum <=255) %>% #filter for CyanoHAB season
+  group_by(Yr) %>% #group all records by year
+  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+precip_sumtot
+```
+
+The average annual total P load, during the CyanoHAB season, was
+`r mean(precip_sumtot$sum_TP_kgyr)` +- `r sd(precip_sumtot$sum_TP_kgyr)/sqrt(length(precip_sumtot$sum_TP_kgyr))` kg/yr.
+
+d) plotting total P load, during the CyanoHAB season...
+
+```{r}
+ggplot(precip_sumtot, aes(x=as.factor(Yr), y=sum_TP_kgyr)) +
+  geom_col() +
+  theme_classic(base_size=12) +
+  labs(x="Year", y="Total P loading from atmospheric deposition (kg/yr)") 
+```
+
+Total P load from atm deposit plotted by year for CyanoHAB season.
+
+e) calculating annual total P loading from atm deposit by year...
+
+```{r}
+precip_yrtot<- precip_interp %>%
+  group_by(Yr) %>% #group all records by year
+  summarise(sum_TP_kgyr=sum(TotP_kgday))  #calculate the total P load
+precip_yrtot
+```
+
+The average annual total P load, for the year, was
+`r mean(precip_yrtot$sum_TP_kgyr)` +- `r sd(precip_yrtot$sum_TP_kgyr)/sqrt(length(precip_yrtot$sum_TP_kgyr))` kg/yr. 
+
+f) plotting annual total P load per year...
+```{r}
+ggplot(precip_yrtot, aes(x=as.factor(Yr), y=sum_TP_kgyr)) +
+  geom_col() +
+  theme_classic(base_size=12) +
+  labs(x="Year", y="Total P loading from atmospheric deposition (kg/yr)") 
+```
+
+Total P load from atm deposit plotted by year.
+
+# Step 5. Save estimated P atm deposition as separate data file:
+
+```{r}
+precip_sum<- precip_interp %>%
+  filter(daynum>= 195 & daynum <=255) #filter for CyanoHAB season
+write.csv(precip_sum, file="Cleaned_data/Mendota_P_atm.csv")
 ```
